# avr-absurd

./: .gitignore  AvrUpdiDebugger.sublime-workspace  LICENSE  README.md  guesswork.md  pyproject.toml
absurd/: __main__.py  debugger.py  deviceinfo.py  rspserver.py
absurd/debugger/: debugger.py
absurd/rspserver/: rspserver.py
absurd/updi/: __init__.py  updicompat.py  updirev3.py
src/absurd/: __main__.py
src/absurd/debugger/: debugger.py
src/absurd/deviceinfo/: __init__.py  deviceinfo.py
src/absurd/rspserver/: __init__.py  rspserver.py
src/absurd/updi/: __init__.py  updicompat.py  updirev3.py
