[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "avr-absurd"
version = "0.1.0"
authors = [
  { name="feline-felicity" },
]
description = "GDB RSP server for AVR MCUs connected by SerialUPDI"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
  "pyserial",
]
license = {file = "LICENSE"}
keywords = ["avr", "debugger", "ocd", "serialupdi"]

[project.scripts]
avr-absurd = "absurd.__main__:main"

[project.urls]
Homepage = "https://github.com/feline-felicity/avr-absurd"
Issues = "https://github.com/feline-felicity/avr-absurd/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/absurd"]